Fixed Homepage responsiveness and home header alignments

--- a/pachi-exchange/src/styles/HomeHeader.css
+++ b/pachi-exchange/src/styles/HomeHeader.css
@@ -1,6 +1,6 @@
 .homeHeader_container {
   width: 100%;
-  height: auto;
+  height: 80px;
   background: #e4f1fd;
   display: flex;
   flex-direction: row;
@@ -41,7 +41,6 @@
 .pachiLogo {
   height: 50px;
   width: auto;
-  margin-left: 20px;
 }
 
 .logout_button {
@@ -83,4 +82,16 @@
 .sweepstakes_button:hover,
 .account_button:hover {
   color: #3fa2f7;
+}
+.home_avatar {
+  width: 80%;
+  height: 80%;
+  margin-left: 10px;
+}
+
+@media (min-width: 320px) and (max-width: 899px) {
+  .pachiLogo {
+    width: 200px;
+    height: 40px;
+  }
 }
